<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignInFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/dp_158"
                android:layout_height="@dimen/dp_152"
                android:scaleType="fitXY"
                android:src="@drawable/sign_in_small_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/dp_299"
                android:layout_height="@dimen/dp_202"
                android:src="@drawable/pana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_16"
                android:scaleType="fitXY"
                android:src="@drawable/signin_background"
                app:layout_constraintBottom_toBottomOf="@id/constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_24"
                android:fontFamily="@font/manrope_semibold"
                android:text="Sign in"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView4" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/manrope_semibold"
                android:text="Email"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in" />

            <EditText
                android:id="@+id/email_Sign_In"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="@dimen/dp_6"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:outlineProvider="background"
                android:paddingStart="@dimen/dp_8"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />


            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_Sign_In" />

            <com.rubabe.shopapp.custom.CustomEditText
                android:id="@+id/password_Sign_In"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/dp_6"
                android:ems="10"
                android:inputType="text"
                android:outlineProvider="background"
                android:paddingStart="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <TextView
                android:id="@+id/forgetPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="Forgot Password?"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_Sign_In" />


            <TextView
                android:id="@+id/switchToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/create_new_account_sign_up"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgetPasswordTV" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_32"
                android:fontFamily="@font/manrope_semibold"
                android:onClick="signIn"
                android:padding="12dp"
                android:text="@string/sign_in"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/switchToSignUp"
                app:layout_constraintStart_toStartOf="@+id/switchToSignUp"
                app:layout_constraintTop_toBottomOf="@+id/switchToSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>